--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -334,13 +334,13 @@
     margin-left: -0.5em;
     padding-left: 0.5em;
     padding-right: 0.5em;
-    color: #fff;
+    color: rgb(249, 0, 17);
     font-weight: bold;
     background: $primary-color;
     border-radius: $border-radius;
 
     &:hover {
-      color: #fff;
+      color: rgb(9, 9, 199);
     }
   }
 }
