--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -87,8 +87,11 @@
     border-radius: 50%;
 
     @include breakpoint($large) {
-      padding: 5px;
-      border: 1px solid $border-color;
+      // padding: 5px;
+      // border: 1px solid $border-color;
+      padding: 1px;
+      border: 0.2px solid $border-color;
+
     }
   }
 }
