--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,7 +64,7 @@ $primary-color              : rgb(159, 33, 28);
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #52adc8;
+$info-color                 : #1769FF; //#52adc8;
 
 /* brands */
 $behance-color              : #1769FF;
